// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@coveo/create-atomic-result-component when called in an existing project should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "nPYqvXi8NsbfC8R2+5TXFfiTNsE=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "t2ijBtfSMeYJbqfftNaaKO/djIo=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "/5yLi44o1uyQViLBqN4GTX4Wifo=",
                      "name": "cdn.js",
                    },
                    HashedFile {
                      "hash": "/5yLi44o1uyQViLBqN4GTX4Wifo=",
                      "name": "index.cjs.js",
                    },
                    HashedFile {
                      "hash": "BHkYREiqjkQizanFWrHUH+O5/HI=",
                      "name": "index.d.ts",
                    },
                    HashedFile {
                      "hash": "AVg2xEIhlYFa1JdLuHECP4RcRwg=",
                      "name": "index.es2017.js",
                    },
                    HashedFile {
                      "hash": "orpFM4J34T2gX7c3vGiovp0rdxM=",
                      "name": "index.js",
                    },
                    HashedFile {
                      "hash": "WNqwx6y7/TKh0xE/ENZlA00Dy/g=",
                      "name": "package.json",
                    },
                  ],
                  "hash": "sWhaIzdNtSJjLJC7gUXMjbEJdx0=",
                  "name": "loader",
                },
                HashedFile {
                  "hash": "N2WPuZTVVLJS7j/LIvpv9VAmR/k=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "EpKK14CXyjrSNQsuEEKqSalxDxE=",
                      "name": "components.d.ts",
                    },
                    HashedFile {
                      "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                      "name": "oh-wow-another-component-can-you-believe-it.css",
                    },
                    HashedFile {
                      "hash": "I+1b5N1kyPbt/73pkZi5tRoAt68=",
                      "name": "oh-wow-another-component-can-you-believe-it.tsx",
                    },
                    HashedFile {
                      "hash": "xP4FebG8AhkGm5G5892sV4YgrI4=",
                      "name": "readme.md",
                    },
                  ],
                  "hash": "kBuPHHOR70Cwg3Dk7FWer5liJwA=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "o/wjp7ceO6Frr8oWEWwMMbpgj60=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "kwu3PCT1QH+btgcfQ1qgdpqc+KU=",
              "name": "oh-wow-another-component-can-you-believe-it",
            },
          ],
          "hash": "GzX2sDzI0zzaXoLTQ88ihbrY+Pk=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "V7y/8CwkVmHHCoFc1OqeZ9uA7Uo=",
          "name": "pages",
        },
      ],
      "hash": "tx9LeVwzRbr7EbPQn8R05yI5yoA=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "bzV0SnoEBWUXWHsFx1d3VuESNf8=",
  "name": "no-args",
}
`;

exports[`@coveo/create-atomic-result-component when called with a component name without hyphen should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "nPYqvXi8NsbfC8R2+5TXFfiTNsE=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "t2ijBtfSMeYJbqfftNaaKO/djIo=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "VRpcLjEBih0dw6Moau9SpSHR1tQ=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                      "name": "atomic-nohypen.css",
                    },
                    HashedFile {
                      "hash": "DHc1UOzcvrRyRP7cNfkhee0USQE=",
                      "name": "atomic-nohypen.tsx",
                    },
                  ],
                  "hash": "bBaaDceapg0y5AjIvm6Qiia9piQ=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "o/wjp7ceO6Frr8oWEWwMMbpgj60=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "rO4GJbiIkUxMCGNjE7rII1JOurU=",
              "name": "atomic-nohypen",
            },
          ],
          "hash": "fdcKPUYjVSHpoZD/FMrUVzoA+kQ=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "V7y/8CwkVmHHCoFc1OqeZ9uA7Uo=",
          "name": "pages",
        },
      ],
      "hash": "Y8OQ66dk8LqD/T1218hL3gat9HU=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "dNUnLReRFng2eqTXtSgo5PwKLKU=",
  "name": "invalid-arg",
}
`;

exports[`@coveo/create-atomic-result-component when called with a valid component name should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "nPYqvXi8NsbfC8R2+5TXFfiTNsE=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "t2ijBtfSMeYJbqfftNaaKO/djIo=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "1pQ15rzAsJpY49mFr8MSYhaPBxU=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                      "name": "valid-component-name.css",
                    },
                    HashedFile {
                      "hash": "ShFXwot8XbCjD/A7x/1LQ0+hYI4=",
                      "name": "valid-component-name.tsx",
                    },
                  ],
                  "hash": "pFuu6S9wb+y09faE9Lxub6t+cfY=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "o/wjp7ceO6Frr8oWEWwMMbpgj60=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "umtkvLfBEZiOn8JfB6ifDMg23rg=",
              "name": "valid-component-name",
            },
          ],
          "hash": "e++QKDkJLIFbsKJWgD+ouhGMjDE=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "V7y/8CwkVmHHCoFc1OqeZ9uA7Uo=",
          "name": "pages",
        },
      ],
      "hash": "1f3SQzBQ4wN87aoyIMsFNVo/o4Q=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "gTlFjvORWdK4/U+VBINBmeqAPfU=",
  "name": "valid-arg",
}
`;

exports[`@coveo/create-atomic-result-component when called without any args should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "nPYqvXi8NsbfC8R2+5TXFfiTNsE=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "t2ijBtfSMeYJbqfftNaaKO/djIo=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "Vvwim7aBDG6450P2Rv9zXN3OcCM=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                      "name": "sample-result-component.css",
                    },
                    HashedFile {
                      "hash": "DMYROzP/GYB/aoia+R5JUflx37w=",
                      "name": "sample-result-component.tsx",
                    },
                  ],
                  "hash": "zQmeniXwoag2rYtOWGtLO1oiwlQ=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "o/wjp7ceO6Frr8oWEWwMMbpgj60=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "AXGrvotcLZzo7bDaAnmYhcHa90g=",
              "name": "sample-result-component",
            },
          ],
          "hash": "mQvuoKmL5PV5mCu0tpoojiafOV8=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "V7y/8CwkVmHHCoFc1OqeZ9uA7Uo=",
          "name": "pages",
        },
      ],
      "hash": "YR8hSYvHdEo8u2PuuyUUKyP3dVs=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "NRA2ixE+O40vg2igppwyG34HgBw=",
  "name": "no-args",
}
`;
